--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <div class="container footer grid">
     <div class="reference">
       <div class="title">Reference</div>
-      <div class="items">
+      <div class="items" id="reference__items">
         <div class="item _1">
           <div class="profession__fullname">Даниил Гросс</div>
           <div class="profession__description">
@@ -136,7 +136,7 @@
             <!-- В данном блоке нельзя забывать про ::before{ content: 'ИБ'; } -->
             Специалист по обеспечению информационной безопасности.
           </div>
-          <div class="studying__time">2018&ndash;2022</div>
+          <div class="studying__time">2018 &ndash; 2022</div>
           <div class="contacts">
             <a href="https://vk.com/katerfire" class="icon-vk icon-15pt"></a>
             <a href="https://t.me/damir_gerc"  class="icon-telegram icon-15pt"></a>
@@ -218,10 +218,6 @@
     </div>
   </div>
   
-  <script>
-    document.querySelector("button").onclick = function(){
-      console.log("button onclick")
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
